--- a/css/style.css
+++ b/css/style.css
@@ -8,11 +8,19 @@
 	font-size: 12px !important;
 }
 
-#chart{
-	position: absolute;
+#chart_iframe{
+	position: relative;
 	top: 0;
-	left: 450px;
-	right: 0;
+	left: 0;
+    width:100%;
+    height:100%;
+}
+#chart{
+    position: absolute;
+    top: 0;
+    left: 450px;
+    right: 0;
+    bottom:0;
 }
 
 #maker_date-start-input,
@@ -29,3 +37,4 @@
 #maker_url{
 	word-break : break-all;
 }
+
